--- a/.config/heliumbar/style.css
+++ b/.config/heliumbar/style.css
@@ -1,23 +1,11 @@
-.root{
-  font-size:12px;
-  /* margin-top:10px; */
-  padding:3px 5px;
+.root {
+  font-size: 12px;
+  padding: 5px 100px;
 }
 
 .battery,.brightness,.tray,.hyprland{
-  background-color:#5c5f77;
-  padding:5px 10px;
-  border-radius:7px;
-  color:white;
+  background-color:#6e738d;
+  padding:6px 10px;
+  color:#f4dbd6;
 }
-
-/* .battery{ */
-/*   border-radius:7px 0 0 7px; */
-/*   padding-right:5px; */
-/* } */
-/* .brightness{ */
-/*   border-radius:0px 7px 7px 0; */
-/*   padding-left:5px; */
-/* } */
-
 
