--- a/modules/configs/waybar/style.css
+++ b/modules/configs/waybar/style.css
@@ -1,7 +1,6 @@
-
 * {
     border: none;
-    border-radius: 10px;
+    border-radius: 13px;
     font-family: "JetBrainsMono Nerd Font";
     font-weight: bold;
     font-size: 14px;
@@ -15,44 +14,23 @@ window#waybar {
 
 tooltip {
     background: #000000;
-    border-radius: 7px;
-    border-width: 2.5px;
-    border-style: solid;
-    border-color: #8aadf4;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    border-radius: 10px;
+    border: 2.5px solid #8aadf4;
+    padding: 5px;
 }
 
-
+/* Workspaces */
+#workspaces {
+    background: #1e1e2e;
+    border-radius: 13px;
+    margin: 5px;
+    padding-right: 0;
+}
 
 #workspaces button {
     color: #313244;
     margin-right: 5px;
-    padding-right: 0px;
-    padding-left: 0px;
-}
-
-#workspaces button.active {
-    color: #89b4fa;
-}
-
-#workspaces button.focused {
-    color: #a6adc8;
-    background: #eba0ac;
-    border-radius: 13px;
-}
-
-
-
-#workspaces button.persistent {
-    color: #f9e2af;
-}
-
-
-#workspaces button.empty {
-    color: #313244;
+    padding: 0;
 }
 
 #workspaces button.active,
@@ -61,137 +39,103 @@ tooltip {
     box-shadow: inset 0 -1px #1e1e2e;
 }
 
+#workspaces button.focused {
+    color: #a6adc8;
+    background: #eba0ac;
+}
+
+#workspaces button.persistent {
+    color: #f9e2af;
+}
+
+#workspaces button.empty {
+    color: #313244;
+}
+
 #workspaces button.urgent {
     color: #f38ba8;
 }
+
+/* Modules */
 #battery,
-#battery,
-#language,
 #cpu,
+#memory,
+#disk,
 #window,
 #clock,
 #pulseaudio,
 #pulseaudio.microphone,
-#workspaces,
+#language,
 #tray,
-#memory,
 #custom-wallpaper,
 #backlight-slider,
-#disk,
 #cava,
-#tray {
+#network,
+#custom-notifications,
+#custom-updates,
+#custom-player,
+#bluetooth {
     background: #1e1e2e;
-    opacity: 1.0;
-    padding: 1.5px 7px 1.5px 7px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    color: inherit;
     border-radius: 13px;
-    margin-right: 5px;
-    margin-left: 5px;
+    margin: 5px;
+    padding: 1.5px 7px;
 }
 
-#workspaces {
-    background: #1e1e2e;
-    border-radius: 13px;
-    margin-left: 5px;
-    padding-right: 0px;
-}
-
-#window {
-    border-radius: 7px;
-    margin-left: 60px;
-    margin-right: 60px;
-}
-
+/* Specific styling */
 #clock {
     color: #a6e3a1;
-    border-radius: 0px 13px 13px 0px;
-    margin-right: 0px;
-    margin-left: 0px;
-}
-
-#network {
-    color: #f9e2af;
-    border-radius: 7px 7px 7px 7px;
-    margin-right: 5px;
-}
-
-#custom-notifications {
-    color: #f9e2af;
-    border-radius: 7px 7px 7px 7px;
-    padding-left: 9px;
-    padding-right: 15px;
-    margin-left:  2px;
-    margin-right: 2px;
-
-}
-
-#custom-updates {
-    color: #89b4fa;
-    border-radius: 7px 7px 7px 7px;
-    border-left:  0px;
-    border-right: 0px;
-    margin-left:  2px;
-    margin-right: 2px;
-}
-
-#custom-player {
- color: #cba6f7;
- border-radius: 7px 7px 7px 7px;
- padding-left: 4px;
- margin-left:  5px;
- margin-right: 5px;
 }
 
 #memory {
     color: #89b4fa;
-    border-radius: 0px 0px 0px 0px;
-    margin-left: 0px;
-    margin-right:0px;
 }
 
 #disk {
     color: #f9e2af;
-    border-radius: 0px 13px 13px 0px;
-    margin-left: 0px;
 }
 
-
-#bluetooth {
-  color: #89b4fa;
-  border-radius: 0px 13px 13px 0px;
-  margin-left: 5px;
-  margin-right: 5px;
-} 
+#cpu {
+    color: #89b4fa;
+    padding-left: 10px;
+}
 
 #pulseaudio {
-  color: #89b4fa;
-  border-radius: 0px 0px 0px 0px;
-  margin-right: 0px;
-  margin-left: 0px;
+    color: #89b4fa;
 }
 
 #pulseaudio.microphone {
     color: #cba6f7;
-    border-radius: 0px 0px 0px 0px;
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 5px;
 }
 
 #language {
-   border-radius: 13px 0px 0px 13px;
-   margin-right:0px;
+    margin-right: 0;
 }
 
-#cpu {
-   border-radius: 13px 0px 0px 13px;
-   padding-left:10px;
-   margin-right:0px;
-   margin-left: 0px;
+#network {
+    color: #f9e2af;
 }
 
-#cava {
-   border-radius: 13px 13px 13px 13px;
-   margin-right: 0px
-   
+#custom-notifications {
+    color: #f9e2af;
+    padding-left: 9px;
+    padding-right: 15px;
+}
+
+#custom-updates {
+    color: #89b4fa;
+    border-left: 0;
+    border-right: 0;
+}
+
+#custom-player {
+    color: #cba6f7;
+    padding-left: 4px;
+}
+
+/* Window module centered and neat */
+#window {
+    margin-left: 60px;
+    margin-right: 60px;
 }
